# priyam

./: CONTRIBUTING.md  LICENSE  README.md  hello.py  pyproject.toml  requirements.txt  setup.py  test.py
docs/: algebra.md  date_time_utils.md  index.md  latex_support.md  number_theory.md  number_utils.md  probability_stats.md  string_utils.md
priyam/: __init__.py  algebra.py  cs.py  date_time_utils.py  latex_support.py  linkChecker.py  number_theory.py  number_utils.py  physics.py  pmath.py  probability_stats.py  string_utils.py
priyam.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_algebra.py  test_date_time_utils.py  test_latex_support.py  test_number_theory.py  test_number_utils.py  test_probability_stats.py  test_string_utils.py
